feat: add cert signing to macos builds

--- a/.github/workflows/monokle-sign-test.yml
+++ b/.github/workflows/monokle-sign-test.yml
@@ -82,6 +82,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.github_token }}
           EP_PRE_RELEASE: true
+          NOTARIZE: true
           CSC_LINK: ${{ secrets.MONOKLE_MACOS_CERTS }}
           CSC_KEY_PASSWORD: ${{ secrets.MONOKLE_MACOS_CERTS_PASSWORD }}
 
@@ -117,7 +118,7 @@ jobs:
           ls -la
         if: ${{ always() }}
 
-  build-and-publishwindows:
+  build-and-publish-windows:
     runs-on: windows-latest
 
     steps:
