--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cross-env": "7.0.3",
     "electron": "13.1.9",
     "electron-builder": "22.11.11",
+    "electron-notarize": "1.1.0",
     "electron-reload": "2.0.0-alpha.1",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.3.0",
@@ -131,12 +132,12 @@
       "category": "public.app-category.utilities",
       "icon": "build/icon.png",
       "hardenedRuntime": true,
-      "entitlements": "./build/electron/src/entitlements.mac.inherit.plist",
+      "entitlements": "./electron/src/entitlements.mac.inherit.plist",
       "target": [
         "dmg"
       ]
     },
-    "afterSign": "./electron/afterSignHook.js",
+    "afterSign": "./notarization/afterSignHook.js",
     "dmg": {
       "icon": "build/icon.png"
     },
@@ -177,7 +178,8 @@
       "!**/node_modules/@jest/**/*",
       "!**/node_modules/monaco-editor/min/**/*",
       "!**/node_modules/monaco-editor/min-maps/**/*",
-      "!**/docs/**/*"
+      "!**/docs/**/*",
+      "!notarization/**/*"
     ],
     "extraResources": [
       {
